# MIRCO

./: .clang-format  .cproject  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  Studienarbeit_Dokumentation.docx  Studienarbeit_Laufzeitbestimmungen.xlsx  Studienarbeit_Strong Scaling.docx  TestingFramework.cmake  TestingFramework_kokkos.cmake  clangcuda++  create-mirco-python-venv  create-mirco-python-venv.sh  do-configure  evaluate.cpp  evaluate.h  input.json  input_sup2.json  input_sup5.json  linearsolver.cpp  linearsolver.h  main.cpp  matrixsetup.cpp  matrixsetup.h  nonlinearsolver.cpp  nonlinearsolver.h  requirements.txt  setparameters.cpp  setparameters.h  setup_development_environment.sh  slurm_job.sh  slurm_job1.sh  slurm_job2.sh  (+14 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_template.md  custom.md  issue_template.md
.github/workflows/: build-test.yml  docker.yaml
Input/: input_sup2.json  input_sup2.xml  input_sup2.yaml  input_sup2_kokkos.xml  input_sup5.json  input_sup5.xml  input_sup5.yaml  input_sup5_kokkos.xml  input_sup6.xml  input_sup6.yaml  input_sup6_kokkos.xml  input_sup7.xml  input_sup7.yaml  input_sup7_kokkos.xml  input_sup8.yaml
cmake/: mirco_libConfig.cmake.in
dependencies/kokkos/: install.sh
dependencies/kokkos-kernels/: install.sh
dependencies/trilinos/: install.sh
doc/: Studienarbeit_Dokumentation.docx
docker/dependencies/: Dockerfile  compute_dependencies_hash.sh
example/: example1.xml  example1.yaml  example2.xml  example2.yaml  example3.xml  example3.yaml
include/: Amesos_config.h  Anasazi_config.h  AztecOO_config.h  Belos_config.h  EpetraExt_config.h  Epetra_config.h  Ifpack2_config.h  Ifpack_config.h  Isorropia_config.h  KokkosCore_config.h  MLAPI_Space.h  Makefile.export.Amesos  Makefile.export.Anasazi  Makefile.export.AztecOO  Makefile.export.Belos  Makefile.export.Epetra  Makefile.export.EpetraExt  Makefile.export.Gtest  Makefile.export.Ifpack  Makefile.export.Ifpack2  Makefile.export.Intrepid  Makefile.export.IntrepidCore  Makefile.export.Isorropia  Makefile.export.Kokkos  Makefile.export.KokkosAlgorithms  Makefile.export.KokkosContainers  Makefile.export.KokkosCore  Makefile.export.ML  Makefile.export.MueLu  Makefile.export.NOX  Makefile.export.Pamgen  Makefile.export.Phalanx  Makefile.export.Phdmesh  Makefile.export.RTOp  Makefile.export.SEACAS  Makefile.export.SEACASExodus  Makefile.export.SEACASNemesis  Makefile.export.Sacado  Makefile.export.Shards  Makefile.export.Stratimikos  (+45 more)
omp_test/: Makefile  main.cpp  test_program
src/: computecontactforceandarea.cpp  computecontactforceandarea.h  computecontactnodes.cpp  computecontactnodes.h  computemaxandmean.cpp  computemaxandmean.h  computeresidual.cpp  computeresidual.h  contactforceandarea.cpp  contactforceandarea.h  contactpredictors.cpp  contactpredictors.h  contactsetpredictor.cpp  contactsetpredictor.h  contactstatus.cpp  contactstatus.h  createmeshgrid.cpp  createmeshgrid.h  evaluate.cpp  evaluate.h  filesystem_utils.cpp  filesystem_utils.h  firstpredictor.cpp  firstpredictor.h  initialguesspredictor.cpp  initialguesspredictor.h  linearsolver.cpp  linearsolver.h  main.cpp  main_kokkos.cpp  matrixsetup.cpp  matrixsetup.h  mirco_contactpredictors.cpp  mirco_contactpredictors.h  mirco_contactpredictors_kokkos.cpp  mirco_contactpredictors_kokkos.h  mirco_contactstatus.cpp  mirco_contactstatus.h  mirco_contactstatus_kokkos.cpp  mirco_contactstatus_kokkos.h  (+70 more)
src/tmpHelpers/: Timer.cpp  Timer.hpp  kokkosIntegration.hpp
tests/testconfig/: test_release.cmake
tests/unittests/: nonlinear_solver_test.cpp  nonlinear_solver_test.h  test.cpp  test_kokkos.cpp
tests/unittests/data/: input_res2_rmg.xml  input_res2_rmg.yaml  input_res2_rmg_kokkos.xml  input_sup2_topologyfile.xml  input_withDat.xml  input_withDat.yaml  input_withDat_kokkos.xml
tests/unittests/testfiles/: input_sup2.xml
utilities/: .clang-format
